unpackaged/main/default/objects/Scheduling__c/Scheduling__c.object-meta.xml
<CustomObject>
    <description>This object is just created for integrating scheduling applications. By keeping the data separately in other objects, we can limit the failures related to integration</description>
    <label>Scheduling</label>
    <nameField>
        <label>Scheduling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduling</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>