unpackaged/main/default/objects/Scheduling__c/fields/Installation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Completed_Date__c</fullName>
    <label>Installation Completed Date</label>
    <type>Date</type>
</CustomField>