unpackaged/main/default/objects/Scheduling__c/fields/Installation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Installation_Notes__c</fullName>
    <label>Installation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>