unpackaged/main/default/objects/Scheduling__c/fields/Installation_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Scheduled_Date__c</fullName>
    <label>Installation Scheduled Date</label>
    <type>Date</type>
</CustomField>