unpackaged/main/default/objects/Scheduling__c/fields/Installation_Team__c.field-meta.xml
<CustomField>
    <fullName>Installation_Team__c</fullName>
    <formula>TEXT(Opportunity__r.Installation_Team__c )</formula>
    <inlineHelpText>Service Provider</inlineHelpText>
    <label>Installation Team</label>
    <type>Text</type>
</CustomField>