unpackaged/main/default/objects/Scheduling__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Scheduling</relationshipLabel>
    <relationshipName>Scheduling</relationshipName>
    <type>Lookup</type>
</CustomField>