unpackaged/main/default/objects/Scheduling__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scheduling</relationshipLabel>
    <relationshipName>Scheduling</relationshipName>
    <type>Lookup</type>
</CustomField>