unpackaged/main/default/objects/Scheduling__c/fields/Schedule_Updated__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Updated__c</fullName>
    <label>Schedule Updated</label>
    <type>DateTime</type>
</CustomField>