unpackaged/main/default/objects/Scheduling__c/fields/Service_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Notes__c</fullName>
    <label>Service Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>