unpackaged/main/default/objects/Scheduling__c/fields/Service_Call_Required__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Call Required</label>
    <type>Checkbox</type>
</CustomField>