unpackaged/main/default/objects/Scheduling__c/fields/Service_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Completed_Date__c</fullName>
    <label>Service Completed Date</label>
    <type>Date</type>
</CustomField>