unpackaged/main/default/objects/Scheduling__c/fields/Site_Survey_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Scheduled_Date__c</fullName>
    <label>Site Survey Scheduled Date</label>
    <type>Date</type>
</CustomField>