unpackaged/main/default/objects/Scheduling__c/fields/Site_Survey_Sent_to_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Sent_to_Dispatch_Date__c</fullName>
    <label>Site Survey Sent to Dispatch Date</label>
    <type>Date</type>
</CustomField>