unpackaged/main/default/objects/Scheduling__c/fields/Tentative_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Installation_Date__c</fullName>
    <label>Tentative Installation Date</label>
    <type>Date</type>
</CustomField>