unpackaged/main/default/objects/Scheduling__c/recordTypes/Installation_Job.recordType-meta.xml
<RecordType>
    <fullName>Installation_Job</fullName>
    <active>true</active>
    <label>Installation Job</label>
</RecordType>