unpackaged/main/default/objects/Scheduling__c/recordTypes/Service_Call.recordType-meta.xml
<RecordType>
    <fullName>Service_Call</fullName>
    <active>true</active>
    <label>Service Call</label>
</RecordType>