unpackaged/main/default/objects/Scheduling__c/recordTypes/Survey_Job.recordType-meta.xml
<RecordType>
    <fullName>Survey_Job</fullName>
    <active>true</active>
    <label>Survey Job</label>
</RecordType>