unpackaged/main/default/objects/Scheduling__c/listViews/Business_Processing_Scheduling.listView-meta.xml
<ListView>
    <fullName>Business_Processing_Scheduling</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Processing</label>
    <queue>Business_Processing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>