unpackaged/main/default/objects/Scheduling__c/listViews/Customer_Outreach_Scheduling.listView-meta.xml
<ListView>
    <fullName>Customer_Outreach_Scheduling</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Outreach</label>
    <queue>Customer_Outreach</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>