unpackaged/main/default/objects/Scheduling__c/listViews/Palmetto_Scheduling.listView-meta.xml
<ListView>
    <fullName>Palmetto_Scheduling</fullName>
    <filterScope>Queue</filterScope>
    <label>Palmetto</label>
    <queue>Palmetto</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>