unpackaged/main/default/objects/Scheduling__c/listViews/Scheduling_Team_Scheduling.listView-meta.xml
<ListView>
    <fullName>Scheduling_Team_Scheduling</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Installation_Scheduled_Date__c</columns>
    <columns>Installation_Completed_Date__c</columns>
    <filterScope>Queue</filterScope>
    <label>Scheduling Team</label>
    <queue>Scheduling_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>